llvmpipe: llvmpipe doesn't support pure integers yet.

Should fix: https://bugs.freedesktop.org/show_bug.cgi?id=42240

Signed-off-by: Dave Airlie <airlied@redhat.com>